--- a/jour06/job05/style3.css
+++ b/jour06/job05/style3.css
@@ -1,6 +1,6 @@
 form {
-  max-width: 500px;
-  font-family: 'Arial', sans-serif;
+  max-width: 200px;
+  font-family: initial;
   margin: 20px auto;
   padding: 20px;
   background-color: #1C1C1C;
