--- a/jour06/job05/style1.css
+++ b/jour06/job05/style1.css
@@ -1,6 +1,8 @@
+body * {
+  font-family: 'Arial', sans-serif;
+}
 form {
   max-width: 500px;
-  font-family: 'Arial', sans-serif;
   margin: 20px auto;
   padding: 20px;
   background-color: #1C1C1C;
