--- a/jour06/job05/style2.css
+++ b/jour06/job05/style2.css
@@ -1,9 +1,11 @@
+body * {
+    font-family: 'Impact', sans-serif;
+}
 form {
   max-width: 500px;
-  font-family: 'Arial', sans-serif;
   margin: 20px auto;
   padding: 20px;
-  background-color: #1C1C1C;
+  background-color: #ADEDAA;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
@@ -15,7 +17,7 @@ form label, form legend {
   display: block;
   margin-bottom: 8px;
   font-weight: bold;
-  color: #00BFFF;
+  color: #010101;
 }
 
 form select {
@@ -24,8 +26,8 @@ form select {
   margin-bottom: 15px;
   border: 1px solid #444;
   border-radius: 5px;
-  background-color: #191919;
-  color: #E6E6E6;
+  background-color: #ADEDAA;
+  color: #010101;
   font-size: 16px;
 }
 
@@ -39,10 +41,10 @@ form button {
   display: block;
   width: 100%;
   padding: 10px;
-  background: linear-gradient(to bottom, #00BFFF, #1E90FF);
+  background: linear-gradient(to bottom, #00BFFF, #BDFDBA);
   border: none;
   border-radius: 5px;
-  color: white;
+  color: 010101;
   font-size: 16px;
   font-weight: bold;
   cursor: pointer;
@@ -50,7 +52,7 @@ form button {
 }
 
 form button:hover {
-  background: linear-gradient(to bottom, #1E90FF, #00BFFF);
+  background: linear-gradient(to bottom, #1E90FF, #BDFDBA);
 }
 
 form button:active {
