--- a/jour06/job05/style3.css
+++ b/jour06/job05/style3.css
@@ -1,9 +1,12 @@
+body * {
+  font-family: 'Verdana', sans-serif;
+}
 form {
   max-width: 200px;
-  font-family: initial;
   margin: 20px auto;
+  font-size: 13px;
   padding: 20px;
-  background-color: #1C1C1C;
+  background-color: #FFCCDD;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
@@ -24,8 +27,8 @@ form select {
   margin-bottom: 15px;
   border: 1px solid #444;
   border-radius: 5px;
-  background-color: #191919;
-  color: #E6E6E6;
+  background-color: #FFCCDD;
+  color: #010101;
   font-size: 16px;
 }
 
